--- a/ReportErrorParser/MainWindow.xaml
+++ b/ReportErrorParser/MainWindow.xaml
@@ -11,7 +11,7 @@
             <DockPanel HorizontalAlignment="Stretch" LastChildFill="True" FlowDirection="RightToLeft">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" MinWidth="85" MaxWidth="85">
                     <Button Content="Paste" HorizontalAlignment="Right" Margin="10,10,0,0" VerticalAlignment="Top" MinWidth="75" Click="Paste_Click"/>
-                    <Button Content="Parse" HorizontalAlignment="Right" Margin="10,45,0,0" VerticalAlignment="Bottom" MinWidth="75" Height="30" Click="Button_Click"/>
+                    <Button Content="Parse" HorizontalAlignment="Right" Margin="10,45,0,0" VerticalAlignment="Bottom" MinWidth="75" Height="30" Click="Parse_Click"/>
                 </StackPanel>
                 <TextBox Name="ErrorTextBox" FlowDirection="LeftToRight" HorizontalAlignment="Stretch" MinHeight="95" Margin="10,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" MinWidth="350" />
 
